--- a/ui/Ui_main.ui
+++ b/ui/Ui_main.ui
@@ -59,7 +59,7 @@
      <enum>QTabWidget::West</enum>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <property name="iconSize">
      <size>
@@ -445,8 +445,8 @@
      <widget class="QPushButton" name="button_debug_3">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>590</x>
+        <y>100</y>
         <width>151</width>
         <height>41</height>
        </rect>
@@ -458,7 +458,7 @@
      <widget class="QPushButton" name="button_debug_2">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>590</x>
         <y>50</y>
         <width>151</width>
         <height>41</height>
@@ -471,8 +471,8 @@
      <widget class="QPushButton" name="button_debug_1">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>100</y>
+        <x>590</x>
+        <y>0</y>
         <width>151</width>
         <height>41</height>
        </rect>
@@ -480,6 +480,74 @@
       <property name="text">
        <string>Exit</string>
       </property>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_8">
+      <property name="geometry">
+       <rect>
+        <x>180</x>
+        <y>110</y>
+        <width>341</width>
+        <height>201</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>黑体</family>
+        <pointsize>20</pointsize>
+       </font>
+      </property>
+      <property name="title">
+       <string>管理员面板登入</string>
+      </property>
+      <widget class="QWidget" name="formLayoutWidget">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>30</y>
+         <width>311</width>
+         <height>91</height>
+        </rect>
+       </property>
+       <layout class="QFormLayout" name="formLayout">
+        <item row="0" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>用户名</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>密码</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLineEdit" name="line_user"/>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="line_password">
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QPushButton" name="button_enter_operator">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>140</y>
+         <width>101</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>登入</string>
+       </property>
+      </widget>
      </widget>
     </widget>
    </widget>
