管理员面板实现了登入验证

--- a/ui/Ui_Operator.ui
+++ b/ui/Ui_Operator.ui
@@ -195,6 +195,19 @@
     </property>
    </widget>
   </widget>
+  <widget class="QPushButton" name="button_close">
+   <property name="geometry">
+    <rect>
+     <x>664</x>
+     <y>422</y>
+     <width>131</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>关闭面板</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
