--- a/ui/Ui_Operator.ui
+++ b/ui/Ui_Operator.ui
@@ -35,8 +35,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>221</width>
+     <y>150</y>
+     <width>481</width>
      <height>131</height>
     </rect>
    </property>
@@ -76,7 +76,7 @@
      <x>500</x>
      <y>10</y>
      <width>291</width>
-     <height>121</height>
+     <height>131</height>
     </rect>
    </property>
    <property name="title">
@@ -88,7 +88,7 @@
       <x>20</x>
       <y>30</y>
       <width>261</width>
-      <height>71</height>
+      <height>91</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -113,7 +113,7 @@
    <property name="geometry">
     <rect>
      <x>500</x>
-     <y>140</y>
+     <y>150</y>
      <width>291</width>
      <height>191</height>
     </rect>
@@ -140,7 +140,7 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>旧密码</string>
+        <string>原密码</string>
        </property>
       </widget>
      </item>
@@ -184,9 +184,9 @@
    <widget class="QPushButton" name="button_change_password">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>50</x>
       <y>150</y>
-      <width>131</width>
+      <width>201</width>
       <height>31</height>
      </rect>
     </property>
@@ -207,6 +207,45 @@
    <property name="text">
     <string>关闭面板</string>
    </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_4">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>481</width>
+     <height>131</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>设备信息</string>
+   </property>
+   <widget class="QWidget" name="verticalLayoutWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>461</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <widget class="QLabel" name="label_uuid">
+       <property name="text">
+        <string>UUID:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_network">
+       <property name="text">
+        <string>网络连接：</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
  </widget>
  <resources/>
