--- a/ui/Ui_Operator.ui
+++ b/ui/Ui_Operator.ui
@@ -37,7 +37,7 @@
      <x>10</x>
      <y>150</y>
      <width>481</width>
-     <height>131</height>
+     <height>91</height>
     </rect>
    </property>
    <property name="title">
@@ -48,7 +48,7 @@
      <rect>
       <x>10</x>
       <y>30</y>
-      <width>201</width>
+      <width>241</width>
       <height>41</height>
      </rect>
     </property>
@@ -59,8 +59,8 @@
    <widget class="QPushButton" name="button_quit">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
+      <x>260</x>
+      <y>30</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -115,7 +115,7 @@
      <x>500</x>
      <y>150</y>
      <width>291</width>
-     <height>191</height>
+     <height>211</height>
     </rect>
    </property>
    <property name="font">
@@ -184,11 +184,17 @@
    <widget class="QPushButton" name="button_change_password">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>20</x>
       <y>150</y>
-      <width>201</width>
-      <height>31</height>
+      <width>261</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>黑体</family>
+      <pointsize>14</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>确定</string>
@@ -246,6 +252,19 @@
      </item>
     </layout>
    </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_5">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>240</y>
+     <width>481</width>
+     <height>231</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>商品控制</string>
+   </property>
   </widget>
  </widget>
  <resources/>
